# kde_claude_code_usage

./: .gitignore  LICENSE  README.md  install.sh  uninstall.sh
collector/: Cargo.toml
collector/src/: main.rs  usage.rs
package/: metadata.json
package/contents/code/: claude_usage.py
package/contents/config/: config.qml  main.xml
package/contents/ui/: configAppearance.qml  configGeneral.qml  configLabel.qml  configThresholds.qml  main.qml
