[package]
name = "claude-usage-collector"
version = "0.1.0"
edition = "2021"
description = "Tiny CLI wrapper around the claude-usage crate: emits one JSON line of Claude Code usage for the Plasma widget."

[[bin]]
name = "claude-usage-collector"
path = "src/main.rs"

[dependencies]
ureq = "2"
chrono = { version = "0.4", default-features = false, features = ["serde", "now"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
