[package]
name = "claude-usage-collector"
version = "0.1.0"
edition = "2024"
description = "Tiny CLI that fetches Claude Code usage from Anthropic's OAuth endpoint and emits one JSON line for the Plasma widget."
rust-version = "1.85"

[[bin]]
name = "claude-usage-collector"
path = "src/main.rs"

[dependencies]
ureq = "2"
chrono = { version = "0.4", default-features = false, features = ["serde", "now"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
